first commit, added counts

--- a/BlackJackCS.csproj
+++ b/BlackJackCS.csproj
@@ -60,6 +60,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="utils\Deck.cs" />
+    <Compile Include="utils\Globals.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
